Added Login Docs
