# src/routes/productRoutes.ts
@@ -15,11 +15,11 @@ const router = express.Router();
 
 router.post("/", authMiddleware, isAdmin, singleUpload, addProducts);
 
-router.get("/", authMiddleware, isAdmin, getProducts);
+router.get("/", getProducts);
 
-router.get("/filter", authMiddleware, isAdmin, filterByPriceRange);
+router.get("/filter/price", filterByPriceRange);
 
-router.get("/filter/:category", authMiddleware, isAdmin, filterByCategory);
+router.get("/filter/:category", filterByCategory);
 
 router.patch("/:id", authMiddleware, isAdmin, singleUpload, editProducts);
 
